2010-08-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/snippets.conf:
   Add dummy entry for "do" snippet for Haskell to explicitly avoid the
   default completion.


2010-08-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Fix broken editing of build menu labels.
 * src/encodings.c, src/filetypes.c, configure.ac:
   Auto-enable building with included regex if no regcomp function is
   found.
   Remove checks for HAVE_REGCOMP in Geany source (not TagManager) -
   regex support is required.
 * tagmanager/make.c:
   Backport fix for possible infinite loop from CTags.
 * scintilla/PlatGTK.cxx:
   Backport list box memory leak fixes from Scintilla 2.20.


2010-08-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/project.c:
   Make the Properties dialog filename a label and put it first (patch
   by Jiří Techet, thanks).
 * src/build.c, src/build.h, src/project.c, doc/geany.txt,
   doc/geany.html:
   Remove the "Set build working directories" button from the project
   properties dialog (patch by Jiří Techet, thanks).
 * src/search.c:
   Include all files if the Find in Files pattern field is enabled and
   empty.
 * src/filetypes.c:
   Rename Matlab -> Matlab/Octave. Datafile name remains the same.


2010-08-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/LexTxt2tags.cxx, scintilla/makefile.win32,
   scintilla/include/SciLexer.h, scintilla/include/Scintilla.iface,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
   data/filetypes.txt2tags, wscript:
   Add lexer for Txt2Tags (patch by Forgeot Eric, thanks - #3020632).
 * m4, configure.ac, Makefile.am:
   Use AC_CONFIG_MACRO_DIR (patch by Erik de Castro Lopo, thanks).
 * src/callbacks.c:
   Only prompt for reloading if the document has unsaved changes
   (patch by Jiří Techet, thanks).


2010-08-21  Frank Lanitz  <frank@frank.uvena.de>

 * src/plugindata.h: